--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,9 +59,10 @@ jobs:
 #         asset_path: ./airplay2.zip
 #         asset_name: airplay2.zip
 #         asset_content_type: application/zip
+
     - name: Upload to release
-      uses: JasonEtco/upload-to-release@master
+      uses: Shopify/upload-to-release
       with:
-        args: airplay2.zip
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        name: airplay2.zip
+        path: airplay2.zip
+        repo-token: ${{ secrets.GITHUB_TOKEN }} 
